# Basic_Image_Manipulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
test/inc/: ExampleTest.h
test/src/: ExampleTest.cpp
